--- a/src/pages/HospitalPage.module.css
+++ b/src/pages/HospitalPage.module.css
@@ -186,6 +186,11 @@
   font-size: 16px;
 }
 
+.ReservationBtn2:hover {
+  background-color: var(--mainColor);
+  color: white;
+}
+
 /* .reviewContainer {
   width: 100%;
   max-width: 1120px;
